# lvglcharger

./: .gitignore  .gitmodules  README.md  backends.c  backends.h  command_line.c  command_line.h  config.c  config.h  cursor.c  cursor.h  find-lvgl-sources.sh  furios-recovery.h  indev.c  indev.h  log.c  log.h  lv_conf.h  lv_drv_conf.h  lvglcharger.conf  lvglcharger.h  lvm.c  lvm.h  main.c  meson.build  regenerate-layouts.sh  terminal.c  terminal.h  theme.c  theme.h  themes.c  themes.h
debian/: control  copyright  furios-recovery.initramfs-hook  lvglcharger.furios.conf  lvglcharger.initramfs-hook  rules
